--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f8f9fa;
-  background-image: url('/bg.jpg');
+  background-image: url('../public/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
